Now wrapping video tab in a container with a fixed height. Should correct any wtf? issues with hosts putting text directly underneath widget without knowing how to clear floats.

--- a/media/css/mirosubs-widget.css
+++ b/media/css/mirosubs-widget.css
@@ -848,6 +848,10 @@ margin: 20px 0 0 0px !important;
     height: 300px;
 }
 
+.mirosubs-videoTab-container {
+   height: 32px;
+}
+
 .mirosubs-widget .mirosubs-videoTab {
     font-size: 10px !important;
     float: left !important;
